Limit the personal note to 500 chars. Make sure it doesn't overflow out of the field.

--- a/scss/partials/_section_editor.scss
+++ b/scss/partials/_section_editor.scss
@@ -434,7 +434,7 @@ div.section-editor {
     div.section-editor-add-personal-note {
       border-radius: 4px;
       border: 1px solid $carrot_light_gray_1;
-      height: 80px;
+      min-height: 80px;
       width: 100%;
       @include avenir_M();
       font-size: 15px;
